argocd/fluentd-daemonset-patch.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: fluentd
  namespace: monitoring
spec:
  template:
    spec:
      containers:
        - name: fluentd
