argocd/node-exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: node-exporter
    service-monitor: node-exporter
  name: node-exporter
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: http-metrics
    port: 9100
    protocol: TCP
  selector:
    app: node-exporter
