argocd/elk-elasticsearch-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: elasticsearch
spec:
  hostnames:
    - elasticsearch.service.clee.private.morphacy.net
    - elasticsearch.service.chris-pc.clee.private.morphacy.net
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: default
      namespace: default
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: elk-es-http
          port: 9200
          weight: 1
