argocd/elk-kibana-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kibana
spec:
  hostnames:
    - kibana.service.clee.private.morphacy.net
    - kibana.service.chris-pc.clee.private.morphacy.net
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: default
      namespace: default
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: elk-kb-http
          port: 5601
          weight: 1
