argocd/elk-logstash-beats-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: logstash-beats
spec:
  hostnames:
    - logstash-beats.service.clee.private.morphacy.net
    - logstash-beats.service.chris-pc.clee.private.morphacy.net
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: default
      namespace: default
      port: 443
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: elk-ls-beats
          port: 5044
          weight: 1
