argocd/grafana-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
spec:
  hostnames:
    - grafana.service.clee.private.morphacy.net
    - grafana.service.chris-pc.clee.private.morphacy.net
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: default
      namespace: default
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: grafana-service
          port: 3000
          weight: 1
