argocd/prometheus-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
spec:
  hostnames:
    - prometheus.service.clee.private.morphacy.net
    - prometheus.service.chris-pc.clee.private.morphacy.net
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: default
      namespace: default
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: prometheus-operated
          port: 9090
          weight: 1
